# PSiteDL

./: .coverage  .gitignore  AI_EXECUTION_GUIDE.md  BATCH_DOWNLOAD_DESIGN.md  BATCH_DOWNLOAD_IMPLEMENTATION.md  BATCH_DOWNLOAD_TEST_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DARK_ORANGE_GUI.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  FINAL_TEST_REPORT.md  GUI_ARCH_REVIEW.md  GUI_COMPONENT_SPLIT.md  GUI_IMPLEMENTATION.md  GUI_REDESIGN.md  GUI_STATE_MANAGEMENT.md  GUI_状态检查.md  ICON_INTEGRATION_REPORT.md  LICENSE  OPENSPEC_v0.5.0.md  PHASE2_DESIGN.md  PHASE3_DESIGN.md  PHASE3_TEST_REPORT.md  PHASE4_DESIGN.md  PHASE4_TEST_REPORT.md  PHASE5_CODE_QUALITY_REPORT.md  PHASE5_DOC_REVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_v0.4.0.md  SPLIT_LAYOUT_DESIGN.md  STATUS.md  TDD_REPORT.md  V0.5.0_PROGRESS.md  pyproject.toml  requirements.txt  run_psitedl.sh  run_psitedl_batch.sh  (+2 more)
assets/: README.md  icon.icns
docs/: ADVANCED.md  API_REFERENCE.md  BATCH_DOWNLOAD.md  CONFIGURATION.md  DOWNLOADING.md  GUI_PROGRESS.md  LOGGING.md  MODIFICATION_NOTE_2026-03-16.md  URL_DEDUP.md
examples/: urls_sample.txt
openspec/changes/archive/2026-03-17-gui-progress-visualization/: design.md
openspec/changes/gui-progress-visualization/: phase1_review.md  proposal.md  tasks.md
openspec/changes/gui-progress-visualization/specs/: progress-chart.md
src/PSiteDL.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/webvidgrab/: __init__.py  batch_downloader.py  config.py  downloader.py  errors.py  logger.py  logging.py  progress.py  site_cli.py  site_gui.py  state_manager.py  url_dedup.py
src/webvidgrab/core/: __init__.py  detector.py  utils.py
src/webvidgrab/gui/: __init__.py  progress_chart.py
tests/: conftest.py  test_batch_download.py  test_config.py  test_downloader.py  test_errors.py  test_integration.py  test_logging.py  test_progress.py  test_progress_chart.py  test_state_manager.py  test_url_dedup.py
