[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PSiteDL"
version = "0.1.0"
description = "PSiteDL: webpage segmented video detector and downloader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "yt-dlp>=2025.1.0",
  "playwright>=1.50.0"
]

[project.scripts]
psitedl = "webvidgrab.site_cli:main"
psitedl-gui = "webvidgrab.site_gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
