[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PSiteDL"
version = "0.4.0"
description = "PSiteDL: webpage segmented video detector and downloader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "yt-dlp>=2025.1.0",
  "playwright>=1.50.0",
  "rich>=13.0.0",
  "aiohttp>=3.9.0",
  "pydantic>=2.0.0",
  "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "responses>=0.24.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
]

[project.scripts]
psitedl = "webvidgrab.site_cli:main"
psitedl-gui = "webvidgrab.site_gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ============== 测试配置 ==============
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/webvidgrab",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/webvidgrab"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site_gui.py", "*/site_cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============== 代码质量 ==============
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
